# OCD

./: .gitignore  ARCHITECTUUR.md  PONSENKAART-DEPLOY.md  SCHEMA-INDELING.md  omgevingsbot-vereenvoudiging.md
dso-loader/: .env.example  DEPLOY.md  README.md  load_imtr_50.py  pyproject.toml
dso-loader/scripts/: 2026-05-add-basisgeo-junctions.sql  2026-05-add-geometrie-identificatie.sql  2026-05-add-hoofdlijn-mapping.sql  2026-05-add-imow-thema-waardelijst.sql  2026-05-add-locatie-gio-match.sql  2026-05-add-naammatch-signaal-intra.sql  2026-05-add-naammatch-signaal.sql  2026-05-add-niet-annoteerbaar.sql  2026-05-add-ocd-artikel-label-fn.sql  2026-05-add-regeling-inactief.sql  2026-05-add-tekst-inline-referentie.sql  2026-05-add-tekst-object-consistentie-mv.sql  2026-05-add-tekst-object-consistentie-v2.sql  2026-05-add-tekst-object-consistentie-v3.sql  2026-05-add-tekst-object-consistentie-v4.sql  2026-05-add-tekst-object-consistentie-v5.sql  2026-05-add-tekst-object-consistentie.sql  2026-05-add-trgm-index.sql  2026-05-refactor-p2pwijziging-tekst.sql  2026-06-add-data-health.sql  2026-06-add-gio-locatie-mv.sql  2026-06-add-gio-naam.sql  2026-06-add-wro-planvoorraad.sql  2026-06-prod-cleanup-before-restore.sql  2026-06-prod-cleanup-keep-vth.sql  2026-06-prod-rename-koop-to-vth-met-alias.sql  2026-06-rename-koop-to-vth.sql  backfill_alle_regelingen.py  backfill_gio_naam.py  backfill_tekst_inline_referentie.py  convert_landelijk.py  deploy_planvoorraad_to_prod.py  diff_dso_bronhouder_coverage.py  fase11-embed-vrijetekst.py  fetch_p2pwijziging_geometries.py  (+25 more)
ocd-api/: db.py  (+24 more)
(+64 files in other folders)
