[project]
name = "dso-loader"
version = "0.1.0"
description = "Load all DSO content into Postgres+PostGIS — PoC Utrecht"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
dso-loader = "src.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
